<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.android.singlescreenapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/logo_height"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_name"
                android:textAppearance="@style/CompanyName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_size"
                android:onClick="openGoogleMap">

                <ImageView
                    android:id="@+id/icon_address"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginLeft="@dimen/icon_margin_left"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:background="@drawable/square"
                    android:src="@drawable/icon_address" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/icon_address"
                    android:text="@string/company_address"
                    android:textAppearance="@style/CompanyInfo" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/company_info_margin_top"
                android:onClick="dialPhoneNumber">

                <ImageView
                    android:id="@+id/icon_phone"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginLeft="@dimen/icon_margin_left"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:background="@drawable/square"
                    android:src="@drawable/icon_phone" />

                <TextView
                    android:id="@+id/company_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/icon_phone"
                    android:text="@string/company_phone"
                    android:textAppearance="@style/CompanyInfo" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/company_info_margin_top"
                android:onClick="openUrl">

                <ImageView
                    android:id="@+id/icon_url"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginLeft="@dimen/icon_margin_left"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:background="@drawable/square"
                    android:src="@drawable/icon_url" />

                <TextView
                    android:id="@+id/company_www"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/icon_url"
                    android:text="@string/company_url"
                    android:textAppearance="@style/CompanyInfo" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/company_info_margin_top"
                android:layout_marginBottom="@dimen/company_info_margin_bottom">

                <ImageView
                    android:id="@+id/icon_hours"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/icon_margin_left"
                    android:layout_marginRight="@dimen/icon_margin_right"
                    android:background="@drawable/square"
                    android:src="@drawable/icon_hours" />

                <TextView
                    android:id="@+id/company_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon_hours"
                    android:text="@string/company_open_hours"
                    android:textAppearance="@style/CompanyInfoHours" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
